# delve

./: .gitignore  CLAUDE.md  PLATFORM.md  README.md  app.json  index.js  metro.config.js  package-lock.json  package.json
.claude/: PERMISSIONS.md  settings.json  settings.local.json
.claude/agents/: code-simplifier.md  codebase-compliance-checker.md  plan-architect-reviewer.md  plan-ux-reviewer.md  test-adequacy.md  ui-critic.md  verify-implementation.md  workflow-agents-readme.md
.claude/commands/: README.md  onboard-existing-project.md  start-new-project.md
.rnstorybook/: storybook.requires.ts
.workflow/: config.json  status.json  update-workflow.sh
.workflow/extensions/: README.md
.workflow/extensions-template/: README.md
.workflow/guides/: workflow-guide.md
.xcodebuildmcp/: config.yaml
api/: client.ts
app/: _layout.tsx  sign-in.tsx
contexts/: AuthContext.tsx
docs/: README.md  story-map.md
hooks/: usePersistedCollapseState.ts  usePersistedScrollPosition.ts
inception-notes/: decisions.md  product-spec.md
mock/: topics.ts
server/: .dockerignore  .env.cloudrun.yaml.example  .env.example  .env.production.example  Dockerfile  README.md  deploy.sh  pyproject.toml
server/app/: auth.py  config.py  main.py
server/app/models/: schemas.py
server/app/prompts/: create_topic.py  expand_node.py  subtopics.py
server/app/routers/: auth.py  health.py  topics.py
server/app/services/: ai.py  database.py  topics.py
supabase/: config.toml  seed.sql
types/: index.ts
utils/: buildTree.ts  formatTime.ts  supabase.ts  usePersistedCollapseState.ts
(+119 files in other folders)
