[project]
name = "delve-server"
version = "0.1.0"
description = "Delve API server — AI-powered knowledge exploration"
requires-python = ">=3.11"

[tool.poetry]
name = "delve-server"
version = "0.1.0"
description = "Delve API server — AI-powered knowledge exploration"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
pydantic-settings = "^2.7"
supabase = "^2.13"
anthropic = "^0.52"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
ruff = "^0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
